sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:4: error: '(' expected but identifier found.
  {if i=x-1 {test=true} 
      ^AlgGnomeSort:11: error: illegal start of simple expression
}}} 
 ^